Update locale files. Added "Chinese (Taiwan)" localization files (zh_TW)

--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -378,7 +378,6 @@ Commands.mcrefresh.Success=[[RED]]I raffreddamenti di {0} sono stati rigenerati.
 Commands.mcremove.Success=[[GREEN]]{0} \u00e8 stato rimosso con successo dal database!
 Commands.mctop.Tip=[[GOLD]]Suggerimento: Usa [[RED]]/mcrank[[GOLD]] per visualizzare tutte le tue classifiche personali!
 Commands.mmoedit=[giocatore] <abilit\u00e0> <nuovovalore> [[RED]] - Modifica il bersaglio
-Commands.mmoedit.AllSkills.1=[[GREEN]]Your level in all skills was set to {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]Il tuo livello di {0} \u00e8 stato portato a {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} \u00e8 stata modificata per {1}.
 Commands.mmoupdate.Start=[[GRAY]]Inizio conversione...
@@ -386,43 +385,43 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversione terminata!
 Commands.ModDescription=[[RED]]- Leggi una breve descrizione della mod
 Commands.NoConsole=Questo comando non supporta l\'uso da console.
 Commands.Other=[[GREEN]]--ALTRI COMANDI--
-Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
-Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
-Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
-Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
-Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
-Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
+Commands.Party.Header=[[RED]]-----[][[GREEN]]COMPAGNIA[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NOME: [[WHITE]]{0} {1}
+Commands.Party.ShareMode=[[DARK_GRAY]]MODALIT\u00c0 SPARTIZIONE:
+Commands.Party.ItemShare=[[GRAY]]OGGETTI [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]ESPERIENZA [[DARK_AQUA]]({0})
+Commands.Party.MembersNear=[[DARK_GRAY]]VICINO A TE [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
 Commands.Party.Accept=[[RED]]- Accetta l\'invito a unirti alla compagnia
 Commands.Party.Chat.Off=Chat di Compagnia [[GREEN]]Inattiva
 Commands.Party.Chat.On=Chat di Compagnia [[GREEN]]Attiva
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--COMANDI DI COMPAGNIA--
 Commands.Party.Invite.0=[[RED]]AVVISO: [[GREEN]]Hai ricevuto un invito ad unirti alla compagnia {0} da {1}
-Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
-Commands.Party.Invite=[[RED]]- Send party invite
-Commands.Party.Join=[[GRAY]]Joined Party: {0}
-Commands.Party.Create=[[GRAY]]Created Party: {0}
-Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
-Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
-Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
+Commands.Party.Invite.1=[[YELLOW]]Digita [[GREEN]]/party accept[[YELLOW]] per accettare l\'invito
+Commands.Party.Invite=[[RED]]- Invita a unirsi alla compagnia
+Commands.Party.Join=[[GRAY]]Ti sei unito alla compagnia: {0}
+Commands.Party.Create=[[GRAY]]Creata la Compagnia: {0}
+Commands.Party.Rename=[[GRAY]]Nome della compagnia cambiato in: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Modalit\u00e0 spartizione della compagnia {0} impostata come: [[DARK_AQUA]]{1}
+Commands.Party.AlreadyExists=[[DARK_RED]]La Compagnia {0} esiste gi\u00e0!
 Commands.Party.Kick=[[RED]]Sei stato sospeso dalla tua compagnia {0}!
 Commands.Party.Leave=[[RED]]Hai abbandonato quella compagnia
-Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBRI[[RED]][]-----
 Commands.Party.Members={0}
 Commands.Party.None=[[RED]]Non sei nella compagnia.
 Commands.Party.Quit=[[RED]]- Abbandona la tua attuale compagnia
 Commands.Party.Teleport=<giocatore> [[RED]]- Teletrasportati verso un membro della compagnia
 Commands.Party.Toggle=[[RED]]- Attiva o Disattiva la Chat di Compagnia
-Commands.Party1=[[RED]]- Create a new party
-Commands.Party2=[[RED]]- Join a players party
-Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
-Commands.ptp.Disabled=Party teleporting [[RED]]disabled
-Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
-Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
-Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
-Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
-Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
-Commands.ptp.RequestExpired=[[RED]]Party teleport request has expired!
+Commands.Party1=[[RED]]- Crea una nuova compagnia
+Commands.Party2=[[RED]]- entra in una compagnia di giocatori
+Commands.ptp.Enabled=Teletrasporto di compagnia [[GREEN]]abilitato
+Commands.ptp.Disabled=Teletrasporto di compagnia [[GREEN]]disabilitato
+Commands.ptp.NoRequests=[[RED]]Non hai richieste di teletrasporto in questo momento
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]ha richiesto di teletrasportarsi da te.
+Commands.ptp.Request2=[[GREEN]]Per teletrasportarti, digita [[YELLOW]]/ptp accept. [[GREEN]]La richiesta scadr\u00e0 fra [[RED]]{0} [[GREEN]]secondi.
+Commands.ptp.AcceptAny.Enabled=Conferma delle richieste di teletrasporto di compagnia [[GREEN]]abilitata
+Commands.ptp.AcceptAny.Disabled=Conferma delle richieste di teletrasporto di compagnia [[RED]]disabilitata
+Commands.ptp.RequestExpired=[[RED]]La richiesta di teletrasporto di compagnia \u00e8 scaduta!
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--Classifica mcMMO dei [[BLUE]]Livelli di Potere[[YELLOW]]--
 Commands.PowerLevel.Capped=[[DARK_RED]]LIVELLO DI POTERE: [[GREEN]]{0} [[DARK_RED]]LIVELLO MASSIMO: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]LIVELLO DI POTERE: [[GREEN]]{0}
@@ -442,7 +441,7 @@ Commands.Usage.Level=livello
 Commands.Usage.Message=messaggio
 Commands.Usage.Page=pagina
 Commands.Usage.PartyName=nome della compagnia
-Commands.Usage.Password=password
+Commands.Usage.Password=parola d\'ordine
 Commands.Usage.Player=giocatore
 Commands.Usage.Skill=abilit\u00e0
 Commands.Usage.XP=xp
@@ -450,51 +449,48 @@ mcMMO.NoInvites=[[RED]]Non hai inviti in questo momento
 mcMMO.NoPermission=[[DARK_RED]]Permessi insufficienti.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Se non hai accesso a un\'abilit\u00e0 non sar\u00e0 mostrata qui.
 Party.Forbidden=[mcMMO] Le compagnie non sono permesse in questo mondo (vedi i Permessi)
-Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join <player> [password].
-Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
-Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
-Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
-Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
-Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
-Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
-Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
-Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
-Party.InformedOnJoin={0} [[GREEN]]has joined your party
-Party.InformedOnQuit={0} [[GREEN]]has left your party
-Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
+Party.Help.0=[[RED]]L\'uso corretto \u00e8 [[DARK_AQUA]]/party join <giocatore> [parola d\'ordine].
+Party.Help.1=[[RED]]Per creare una compagnia, usa [[DARK_AQUA]]/party create <nome> [parola d\'ordine]
+Party.Help.2=[[RED]]Consulta [[DARK_AQUA]]/party ? [[RED]]per maggiori informazioni
+Party.Help.4=[[RED]]Per chiudere o aprire la tua compagnia, usa [[DARK_AQUA]]/party <lock>
+Party.Help.5=[[RED]]Per proteggere la tua compagnia con una parola d\'ordine, usa [[DARK_AQUA]]/party password <parola d\'ordine>
+Party.Help.6=[[RED]]Per espellere un giocatore dalla tua compagnia, usa [[DARK_AQUA]]/party kick <giocatore>
+Party.Help.7=[[RED]]Per trasferire la propriet\u00e0 della tua compagnia, usa [[DARK_AQUA]]/party owner <giocatore>
+Party.Help.8=[[RED]]Per sciogliere la tua compagnia, usa [[DARK_AQUA]]/party disband
+Party.InformedOnJoin={0} [[GREEN]]si \u00e8 unito alla tua compagnia
+Party.InformedOnQuit={0} [[GREEN]]ha abbandonato la tua compagnia
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]ha impostato il nome della compagnia come [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Questo non \u00e8 un nome di compagnia valido.
 Party.IsLocked=[[RED]]Questa compagnia \u00e8 gi\u00e0 chiusa!
 Party.IsntLocked=[[RED]]Questa compagnia non \u00e8 chiusa!
-Party.Locked=[[RED]]La compagnia \u00e8 chiusa, solo il capo della compagnia pu\u00f2 invitare nuovi membri.
+Party.Locked=[[RED]]La compagnia \u00e8 chiusa, solo il capo della compagnia pu\u00f2 fare inviti.
 Party.NotInYourParty=[[DARK_RED]]{0} non \u00e8 nella tua compagnia
 Party.NotOwner=[[DARK_RED]]Non sei il capo della compagnia.
 Party.Owner.New=[[GREEN]]{0} \u00e8 il nuovo capo della compagnia.
 Party.Owner.NotLeader=[[DARK_RED]]Non sei pi\u00f9 il capo della compagnia.
 Party.Owner.Player=[[GREEN]]Ora sei il capo della compagnia.
-Party.Password.None=[[RED]]This party is password protected.
-Party.Password.Incorrect=[[RED]]Password di compagnia incorretta.
-Party.Password.Set=[[GREEN]]Party password settata come {0}
-Party.Password.Removed=[[GREEN]]Party password has been cleared.
+Party.Password.Incorrect=[[RED]]Parola d\'ordine della compagnia errata.
+Party.Password.Set=[[GREEN]]Parola d\'ordine della compagnia impostata come {0}
+Party.Password.Removed=[[GREEN]]La parola d\'ordine della compagnia \u00e8 stata rimossa.
 Party.Player.Invalid=[[RED]]Quello non \u00e8 un giocatore valido.
-Party.NotOnline=[[DARK_RED]]{0} is not online!
-Party.Player.InSameParty=[[RED]]{0} already is in your party!
-Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
+Party.NotOnline=[[DARK_RED]]{0} non \u00e8 online!
+Party.Player.InSameParty=[[RED]]{0} \u00e8 gi\u00e0 nella tua compagnia!
+Party.PlayerNotInParty=[[DARK_RED]]{0} non \u00e8 in una compagnia
 Party.Teleport.Dead=[[RED]]Non puoi teletrasportarti verso un giocatore morto.
 Party.Teleport.Hurt=[[RED]]Sei stato ferito negli ultimi {0} secondi e non puoi teletrasportarti.
 Party.Teleport.Player=[[GREEN]]Ti sei teletrasportato da {0}.
 Party.Teleport.Self=[[RED]]Non puoi teletrasportarti verso te stesso!
 Party.Teleport.Target=[[GREEN]]{0} ti ha teletrasportato.
-Party.Teleport.Disabled=[[RED]]{0} doesn\'t allow party teleportation.
-Party.Join.Self=[[RED]]You can\'t join to yourself!
+Party.Teleport.Disabled=[[RED]]{0} non consente il teletrasporto di compagnia.
 Party.Unlocked=[[GRAY]]Party sbloccato.
-Party.Disband=[[GRAY]]The party has been disbanded
-Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
-Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
-Party.ShareType.Exp=EXP
-Party.ShareType.Item=ITEM
-Party.ShareMode.NoShare=NONE
-Party.ShareMode.Equal=EQUAL
-Party.ShareMode.Random=RANDOM
+Party.Disband=[[GRAY]]La compagnia \u00e8 stata sciolta
+Party.Status.Locked=[[DARK_RED]](SOLO SU INVITO)
+Party.Status.Unlocked=[[DARK_GREEN]](APERTA)
+Party.ShareType.Exp=ESPERIENZA
+Party.ShareType.Item=OGGETTI
+Party.ShareMode.NoShare=NESSUNA
+Party.ShareMode.Equal=EQUA
+Party.ShareMode.Random=CASUALE
 Commands.XPGain.Acrobatics=Cadere
 Commands.XPGain.Archery=Attaccare Mostri
 Commands.XPGain.Axes=Attaccare Mostri
@@ -534,7 +530,6 @@ Guides.Page.Invalid=Non \u00e8 un numero di pagina valido!
 Guides.Page.OutOfRange=Quella pagina non esiste, ci sono solo {0} pagine in totale.
 Guides.Repair=[[DARK_AQUA]]Riguardo Riparazione:\n[[YELLOW]]Riparazioni ti permette di usare un blocco di ferro per riparare armature e\n[[YELLOW]]attrezzi, o un blocco d\'oro per rottamare armature e attrezzi.\n\n[[DARK_AQUA]]GUADAGNARE XP:\n[[YELLOW]]Ripara attrezzi o armature usando l\'Incudine di mcMMO. Essa \u00e8\n[[YELLOW]]un blocco di ferro, di base, e non va confusa con\n[[YELLOW]]l\'Incudine standard di Minecraft.\n\n[[DARK_AQUA]]Come faccio a usare Riparazione?\n[[YELLOW]]Piazza un\'Incudine mcMMO e clicca col destro per riparare l\'oggetto\n[[YELLOW]]che tieni in mano in quel momento. Questo consuma 1 oggetto per ogni uso.\n\n[[DARK_AQUA]]Come funziona Maestria nella Riparazione?\n[[YELLOW]]Maestria nella Riparazione aumenta la quantit\u00e0 di riparazione. La quantit\u00e0\n[[YELLOW]]di riparazione supplementare \u00e8 influenzata dal tuo livello di abilit\u00e0 in Riparazione.\n\n[[DARK_AQUA]]Come funziona Super Riparazione?\n[[YELLOW]]Super Riparazione \u00e8 un\'abilit\u00e0 passiva. Quando un giocatore ripara un oggetto,\n[[YELLOW]]gli conferisce una probabilit\u00e0 di ripararlo con efficacia raddoppiata.\n\n[[DARK_AQUA]]Come funziona Forgiatura Arcana?\n[[YELLOW]]Questa abilit\u00e0 passiva ti permette di riparare oggetti con una certa\n[[YELLOW]]probabilit\u00e0 di mantenere i suoi incantesimi. Gli incantesimi possono essere\n[[YELLOW]]mantenuti al loro attuale livello, degradati a un livello inferiore,\n[[YELLOW]]o persi interamente.\n\n[[DARK_AQUA]]Come funziona Rottamazione?\n[[YELLOW]]Piazza un\'Incudine da Rottamazione mcMMO e clicca col destro\n[[YELLOW]]per rottamare l\'oggetto che hai in mano in quel momento.\n[[YELLOW]]Questo far\u00e0 a pezzi l\'oggetto e restituir\u00e0 i lingotti usati.\n[[YELLOW]]NB: puoi rottamare solo attrezzi e armature completamente riparate.
 Guides.Swords=[[DARK_AQUA]]Riguardo Spade:\n[[YELLOW]]Questa abilit\u00e0 conferisce bonus di combattimento a chiunque\n[[YELLOW]]combatta con una spada.\n\n[[DARK_AQUA]]GUADAGNARE XP:\n[[YELLOW]]Gli XP si guadagnano in base alla quantit\u00e0 di danno inflitto ai mob o\n[[YELLOW]]agli altri giocatori quando si impugna una spada.\n\n[[DARK_AQUA]]Come funziona Colpi Seghettati?\n[[YELLOW]]Colpi Seghettati \u00e8 un\'abilit\u00e0 attiva, puoi attivarla cliccando\n[[YELLOW]]col destro con una spada. Questa abilit\u00e0 ti permette di infliggere\n[[YELLOW]]un colpo EaA (Effetto ad Area). Questo EaA far\u00e0 un 25% di danni\n[[YELLOW]]bonus e infligger\u00e0 un effetto di emorragia che dura 5 tick.\n\n[[DARK_AQUA]]Come funziona Contrattacco?\n[[YELLOW]]Contrattacco \u00e8 un\'abilit\u00e0 passiva. Quando subisci colpi dai mob,\n[[YELLOW]]avrai una probabilit\u00e0 di riflettere il 50% del danno che hai sub\u00ecto.\n\n[[DARK_AQUA]]Come funziona Emorragia?\n[[YELLOW]]Emorragia fa in modo che i nemici prendano danno ogni due secondi.\n[[YELLOW]]Il bersaglio sanguiner\u00e0 finch\u00e9 l\'effetto svanisce, o fino alla morte, \n[[YELLOW]]se questa avviene prima.\n[[YELLOW]]La durata del sanguinamento \u00e8 aumentata dalla tua abilit\u00e0\n[[YELLOW]]con le spade.
-Guides.Smelting=Coming soon...
 Guides.Taming=[[DARK_AQUA]]Riguardo Addomesticamento:\n[[YELLOW]]Addomesticamento d\u00e0 ai giocatori vari bonus di combattimento\n[[YELLOW]]quando si usano lupi addomesticati.\n\n[[DARK_AQUA]]GUADAGNARE XP:\n[[YELLOW]]Per guadagnare XP in questa abilit\u00e0 devi addomesticare lupi/ocelot o\n[[YELLOW]]entrare in combattimento con i tuoi lupi.\n\n[[DARK_AQUA]]Come funziona Richiamo della Natura?\n[[YELLOW]]Richiamo della Natura \u00e8 una capacit\u00e0 attiva che ti permette di evocare\n[[YELLOW]]un lupo o un ocelot al tuo fianco. Puoi farlo\n[[YELLOW]]cliccando col sinistro mentre tieni in mano ossa o pesce.\n\n[[DARK_AQUA]]Come funziona Conoscenza delle Bestie?\n[[YELLOW]]Conoscenza delle Bestie permette ai giocatori di ispezionare i propri\n[[YELLOW]]animali e di controllare le statistiche di lupi e ocelot. Clicca col sinistro\n[[YELLOW]]un lupo o un ocelot per usare Conoscenza delle Bestie.\n\n[[DARK_AQUA]]Come funziona Sbranare?\n[[YELLOW]]Sbranare \u00e8 una capacit\u00e0 passiva che ha una probabilit\u00e0 di infliggere un\n[[YELLOW]]effetto di emorragia sui bersagli dei tuoi lupi.\n\n[[DARK_AQUA]]Come funziona Artigli Affilati?\n[[YELLOW]]Artigli Affilati fornisce un bonus al danno inflitto dai lupi.\n[[YELLOW]]Questo bonus al danno dipende dal tuo livello di Addomesticamento.\n\n[[DARK_AQUA]]Come funziona Sicurezza Ambientale?\n[[YELLOW]]Questa capacit\u00e0 passiva permette ai lupi di teletrasportarsi verso di te quando\n[[YELLOW]]vanno vicino a pericoli come Cactus o Lava. D\u00e0 inoltre ai lupi \n[[YELLOW]]immunit\u00e0 ai danni da caduta.\n\n[[DARK_AQUA]]Come funziona Pelliccia Folta?\n[[YELLOW]]Questa capacit\u00e0 passiva riduce il danno e rende i lupi\n[[YELLOW]]resistenti al fuoco.\n\n[[DARK_AQUA]]Come funziona A Prova d\'Urto?\n[[YELLOW]]Questa capacit\u00e0 passiva riduce il danno procurato ai lupi\n[[YELLOW]]dalle esplosioni.\n\n[[DARK_AQUA]]Come funziona Servizio Fast Food?\n[[YELLOW]]Questa capacit\u00e0 passiva d\u00e0 ai lupi una possibilit\u00e0 di guarire\n[[YELLOW]]ogni qualvolta eseguono un attacco.
 Guides.Unarmed=[[DARK_AQUA]]Riguardo Lotta:\n[[YELLOW]]Lotta d\u00e0 ai giocatori vari bonus di combattimento quando usi\n[[YELLOW]]i pugni come armi.\n \n[[DARK_AQUA]]GUADAGNARE XP:\n[[YELLOW]]Gli XP si guadagnano in base alla quantit\u00e0 di danno inflitto ai mob\n[[YELLOW]]o agli giocatori quando sei disarmato.\n\n[[DARK_AQUA]]Come funziona Furore?\n[[YELLOW]]Furore \u00e8 una capacit\u00e0 attiva che viene attivata\n[[YELLOW]]cliccando col destro. Mentre sei in modalit\u00e0 Furore, infliggi il 50% in pi\u00f9\n[[YELLOW]]di danni e puoi rompere materiali fragili istantaneamente, come\n[[YELLOW]]Terra ed Erba.\n\n[[DARK_AQUA]]Come funziona Braccio di Ferro?\n[[YELLOW]]Braccio di Ferro incrementa il danno inflitto quando colpisci mob o\n[[YELLOW]]giocatori con i pugni.\n\n[[DARK_AQUA]]Come funziona Deviare Frecce?\n[[YELLOW]]Deviare Frecce \u00e8 una capacit\u00e0 passiva che ti d\u00e0 una possibilit\u00e0\n[[YELLOW]]di deviare frecce tirate da Scheletri o altri giocatori.\n[[YELLOW]]La freccia cadr\u00e0 a terra innocua.\n\n[[DARK_AQUA]]Come funziona Presa di Ferro?\n[[YELLOW]]Presa di Ferro \u00e8 una capacit\u00e0 passiva che si oppone al disarmo. Man mano che\n[[YELLOW]]il tuo livello di lotta aumenta, le probabilit\u00e0 di evitare un disarmo aumentano.\n\n[[DARK_AQUA]]Come funziona Disarmare?\n[[YELLOW]]Questa capacit\u00e0 passiva permette ai giocatori di disarmare altri giocatori,\n[[YELLOW]]facendo s\u00ec che l\'oggetto usato dal bersaglio cada a terra.
 Guides.Usage=[[RED]] L\'uso \u00e8 /{0} ? [page]
@@ -586,20 +581,3 @@ MOTD.PerksPrefix=[[RED]][Vantaggi mcMMO]
 MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Salasso di Statistiche da Vampirismo: [[DARK_RED]]{0}%
 MOTD.Version=[[GOLD]][mcMMO] versione [[DARK_AQUA]]{0}
 MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - Sito di mcMMO
-Smelting.Ability.FluxMining=[[RED]]Flux Mining Chance: [[YELLOW]]{0}
-Smelting.Ability.FuelEfficiency=[[RED]]Fuel Efficiency Multiplier: [[YELLOW]]{0}x
-Smelting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (VANILLA XP BOOST)
-Smelting.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (FLUX MINING)
-Smelting.Ability.SecondSmelt=[[RED]]Second Smelt Chance: [[YELLOW]]{0}
-Smelting.Ability.VanillaXPBoost=[[RED]]Vanilla XP Multiplier: [[YELLOW]]{0}x
-Smelting.Effect.0=Fuel Efficiency
-Smelting.Effect.1=Increase the burn time of fuel used in furnaces when smelting
-Smelting.Effect.2=Second Smelt
-Smelting.Effect.3=Double the resources gained from smelting
-Smelting.Effect.4=Vanilla XP Boost
-Smelting.Effect.5=Increase vanilla XP gained while smelting
-Smelting.Effect.6=Flux Mining
-Smelting.Effect.7=Chance for ores to be instantly smelted while mining
-Smelting.FluxMining.Success=[[GREEN]]That ore smelted itself!
-Smelting.Listener=Smelting:
-Smelting.SkillName=SMELTING
