Prevent accidental overtranslation of our commands.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -507,15 +507,15 @@ mcMMO.NoSkillNote=[[DARK_GRAY]]If you don't have access to a skill it will not b
 
 ##party
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
-Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]/party join {0} {1}.
-Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]/party create <name> [password]
-Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
-Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
-Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
-Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
-Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
-Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
-Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
+Party.Help.0=[[RED]]Proper usage is [[DARK_AQUA]]{0} <player> [password].
+Party.Help.1=[[RED]]To create a party, use [[DARK_AQUA]]{0} <name> [password].
+Party.Help.2=[[RED]]Consult [[DARK_AQUA]]{0} [[RED]]for more information
+Party.Help.3=[[RED]]Use [[DARK_AQUA]]{0} <player> [password] [[RED]]to join or [[DARK_AQUA]]{1} [[RED]]to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]{0}
+Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]{0} <password>
+Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]{0} <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]{0} <player>
+Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]{0}
 Party.InformedOnJoin={0} [[GREEN]]has joined your party
 Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
