Check config values for exp & item sharing.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -554,6 +554,8 @@ Party.ShareType.Item=ITEM
 Party.ShareMode.None=NONE
 Party.ShareMode.Equal=EQUAL
 Party.ShareMode.Random=RANDOM
+Party.ExpShare.Disabled=[[RED]]Party experience sharing is disabled.
+Party.ItemShare.Disabled=[[RED]]Party item sharing is disabled.
 
 ##xp
 Commands.XPGain.Acrobatics=Falling
