Convert /ptp to use Bukkit CommandAPI

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -709,6 +709,7 @@ Commands.Description.mmoedit=Edit mcMMO levels for a user
 Commands.Description.mmoupdate=Convert mcMMO database from Flatfile to MySQL
 Commands.Description.party=Control various mcMMO party settings
 Commands.Description.partychat=Toggle mcMMO party chat on/off or send party chat messages
+Commands.Description.ptp=Teleport to an mcMMO party member
 Commands.Description.Skill=Display detailed mcMMO skill info for {0}
 Commands.Description.skillreset=Reset mcMMO levels for a user
 Commands.Description.xplock=Lock your mcMMO XP bar to a specific mcMMO skill
