Inviting yourself is bad.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -520,6 +520,7 @@ Party.InformedOnJoin={0} [[GREEN]]has joined your party
 Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
+Party.Invite.Self=[[RED]]You can't invite yourself!
 Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
