--- a/Changelog.txt
+++ b/Changelog.txt
@@ -30,6 +30,7 @@ Version 1.4.00-dev
  + Added Shears, Buckets, Fishing Rods, Flint & Steel, Carrot Sticks, and Bows to the list of items that can be Salvaged
  + Added the "wait" music disc to the default fishing treasures
  + Added "Chinese (Taiwan)" localization files (zh_TW)
+ = Fixed /ptp telporting the target to the player, rather than the other way around.
  = Fixed Impact reducing durability of non-armor equipped blocks
  = Fixed multiple commands not working properly on offline players
  = Fixed /mmoedit not giving feedback when modifying another players stats
