--- a/Changelog.txt
+++ b/Changelog.txt
@@ -77,6 +77,7 @@ Version 1.4.00-dev
  - Removed unused "healthbar" files from the resources
  - Removed config options for disabling commands from the config.yml. This should instead be done through permissions.
  - Removed Chimaera Wing
+ - Removed /mcc command. Replaced with /mcmmo [?|help|commands]
 
 Version 1.3.14
  + Added new Hylian Luck skill to Herbalism.
