Added '/hardcore' and '/vampirism' commands for toggling these modes on or off, along with the necessary permissions nodes.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -650,6 +650,12 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You have stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
+Hardcore.Disabled=[[GOLD]][mcMMO] Hardcore mode disabled.
+Hardcore.Enabled=[[GOLD]][mcMMO] Hardcore mode enabled.
+Hardcore.PercentageChanged=[[GOLD]][mcMMO] The stat loss percentage was changed to {0}.
+Vampirism.Disabled=[[GOLD]][mcMMO] Vampirism mode disabled.
+Vampirism.Enabled=[[GOLD]][mcMMO] Vampirism mode enabled.
+Vampirism.PercentageChanged=[[GOLD]][mcMMO] The stat leech percentage was changed to {0}.
 
 #SPOUT
 Spout.Donate=[[YELLOW]][mcMMO] Donate!
@@ -695,6 +701,7 @@ Smelting.SkillName=SMELTING
 Commands.Description.addlevels=Add mcMMO levels to a user
 Commands.Description.adminchat=Toggle mcMMO admin chat on/off or send admin chat messages
 Commands.Description.addxp=Add mcMMO XP to a user
+Commands.Description.hardcore=Modify the mcMMO hardcore percentage or toggle hardcore mode on/off
 Commands.Description.inspect=View detailed mcMMO info on another player
 Commands.Description.mcability=Toggle mcMMO abilities being readied on right-click on/off
 Commands.Description.mcgod=Toggle mcMMO god-mode on/off
@@ -713,5 +720,6 @@ Commands.Description.partychat=Toggle mcMMO party chat on/off or send party chat
 Commands.Description.ptp=Teleport to an mcMMO party member
 Commands.Description.Skill=Display detailed mcMMO skill info for {0}
 Commands.Description.skillreset=Reset mcMMO levels for a user
+Commands.Description.vampirism=Modify the mcMMO vampirism percentage or toggle vampirism mode on/off
 Commands.Description.xplock=Lock your mcMMO XP bar to a specific mcMMO skill
 Commands.Description.xprate=Modify the mcMMO XP rate or start an mcMMO XP event
