Fixed minor typo in locale file.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -545,7 +545,7 @@ Party.Teleport.Self=[[RED]]You can't teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
 Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
 Party.Rename.Same=[[RED]]That is already the name of your party!
-Party.Join.Self=[[RED]]You can't join to yourself!
+Party.Join.Self=[[RED]]You can't join yourself!
 Party.Unlocked=[[GRAY]]Party is unlocked
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
