--- a/Changelog.txt
+++ b/Changelog.txt
@@ -32,6 +32,7 @@ Version 1.4.00-dev
  + Added "Chinese (Taiwan)" localization files (zh_TW)
  + Added '/hardcore' and '/vampirism' commands for toggling these modes on or off.
  = Fixed bug where splash potions could raise a player's unarmed level
+ = Fixed bug where fired arrows could raise skill levels other than Archery
  = Fixed /ptp telporting the target to the player, rather than the other way around.
  = Fixed Impact reducing the durability of non-armor equipped blocks
  = Fixed Impact reducing improperly the durability of armors (as a consequence it is now more effective)
